--- a/css/style.scss
+++ b/css/style.scss
@@ -312,7 +312,7 @@ header {
                 }
             }
         }
-        p {
+        p.note {
             font-size: 12px;
             font-family: 'Helvetica Neue';
             color: #7e7d7d;
