--- a/css/style.scss
+++ b/css/style.scss
@@ -147,6 +147,7 @@
 * {
     margin: 0;
     padding: 0;
+    font-family: 'Helvetica Neue';
 }
 ul, ol {
     list-style: none;
@@ -159,6 +160,14 @@ div.wrapper {
     width: 95%;
     margin: 0 auto;
 }
+@keyframes enlarge {
+    0% {
+        width: 0%;
+    }
+    100% {
+        width: 100%;
+    }
+}
 header {
     height: 80px;
     background-color: #fcf5eb;
@@ -167,6 +176,7 @@ header {
     position: fixed;
     top: 0;
     width: 100%;
+    z-index: 1000;
     div.wrapper {
         display: flex;
         align-items: center;
@@ -185,9 +195,26 @@ header {
                 align-items: center;
                 li {
                     margin-right: 35px;
+                    position: relative;
                     a {
                         font-size: 16px;
                         font-family: 'Helvetica Neue';
+                    }
+                    &::after {
+                        content: "";
+                        background: #25d366;
+                        height: 3px;
+                        position: absolute;
+                        bottom: -5.5px;
+                        left: 0;
+                        width: 100%;
+                        animation: enlarge 0.5s 1;
+                        display: none;
+                    }
+                    &:hover {
+                        &::after {
+                            display: block;
+                        }
                     }
                 }
             }
@@ -338,6 +365,244 @@ header {
             margin: 0 auto;
             padding: 60px 0;
 
+        }
+    }
+}
+#features {
+    background: #fcf5eb;
+    padding: 25px 0;
+    div.item {
+        div.wrapper {
+            display: flex;
+            align-items: center;
+            justify-content: space-around;
+            padding: 60px 0;
+            div.item-desc {
+                width: 35%;
+                h3 {
+                    font-size: 60px;
+                    line-height: 66px;
+                    font-family: 'Helvetica Neue';
+                    font-weight: 400;
+                    margin-bottom: 20px;
+                }
+                p {
+                    font-size: 18px;
+                    line-height: 25px;
+                    font-weight: 400;
+                    font-family: 'Helvetica Neue';
+                    margin-bottom: 35px;
+                }
+                a {
+                    font-family: 'Helvetica Neue';
+                    display: flex;
+                    align-items: center;
+                    font-size: 18px;
+                    position: relative;
+                    &:hover {
+                        color: #25d366;
+                    }
+                    span.text {
+                        margin-right: 10px;
+                        &::after {
+                            content: "";
+                            background: #25d366;
+                            height: 2px;
+                            position: absolute;
+                            bottom: -5.5px;
+                            left: 0;
+                            width: 90px;
+                        }
+                    }
+                }
+            }
+            div.item-img {
+                width: 40%;
+                display: flex;
+                justify-content: center;
+            }
+        }
+        &:nth-child(even) {
+            div.wrapper {
+                flex-direction: row-reverse;
+            }  
+        }
+        &:nth-child(2) {
+            background: #111B21;
+            div.wrapper {
+                div.item-desc {
+                    h3 {
+                        color: #fff;
+                        span {
+                            color: #25d366;
+                        }
+                    }
+                    p {
+                        color: #fff;
+                    }
+                    a {
+                        color: #fff;
+                    }
+                }
+            }
+        }
+        &:nth-child(3), &:nth-child(4) {
+            div.wrapper {
+                div.item-img {
+                    img.main {
+                        position: relative;
+                    }
+                    img.sub {
+                        position: absolute;
+                        margin-top: 80px;
+                        height: 78%;
+
+                    }
+                }
+            }
+        }
+        &:nth-child(4) {
+            div.wrapper {
+                div.item-img {
+                    img.sub {
+                        margin-top: 140px;
+                        padding-top: 50px;
+                        width: 25%;
+                        height: 50%;
+                    }
+                }
+            }
+        }
+    }
+}
+footer {
+    background: #111b21;
+    padding: 80px 0 35px;
+    div.wrapper {
+        width: 83%;
+        div.top {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            margin-bottom: 100px;
+            div.logo {
+                display: block;
+                width: 20%;
+                div.logo-container {
+                    display: block;
+                    width: 160px;
+                    margin-bottom: 100px;
+                    img {
+                        width: 100%;
+                        display: block;
+                    }
+                }
+                a {
+                    display: flex;
+                    align-items: center;
+                    padding: 16px 28px;
+                    width: 160px;
+                    box-sizing: border-box;
+                    border: 1px solid #000;
+                    border-radius: 32px;
+                    background-color: #25d366;
+                }
+            }
+            div.links {
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+                width: 75%;
+                div.column {
+                    width: 25%;
+                    h6 {
+                        font-size: 12px;
+                        color: #fff;
+                        font-weight: normal;
+                        margin-bottom: 40px;
+                    }
+                    ul {
+                        li {
+                            margin-bottom: 20px;
+                            a {
+                                color: #fff;
+                                font-size: 16px;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+        div.bottom {
+            border-top: 0.2px solid #616060;
+            padding-top: 25px;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            div.left {
+                display: flex;
+                align-items: center;
+                div.copy {
+                    margin-right: 40px;
+                    p {
+                        color: #fff;
+                        font-size: 12px;
+                        line-height: 16px;
+                        max-width: 100px;
+                    }
+                }
+                div.terms {
+                    margin-right: 40px;
+                    display: flex;
+                    align-items: center;
+                    a {
+                        color: #fff;
+                        font-size: 12px;
+                        line-height: 16px;
+                        margin-right: 20px;
+                        max-width: 90px;
+                        display: block;
+                    }
+                }
+                div.social {
+                    ul {
+                        display: flex;
+                        align-items: center;
+                        li {
+                            margin-right: 30px;
+                            a {
+                                color: #fff;
+                                width: 20px;
+                                height: 20px;
+                                display: block;
+                                padding: 15px;
+                                border: 1px solid #fff;
+                                border-radius: 50%;
+                                background: #1c1e21;
+                                svg {
+                                    display: block;
+                                    width: 100%;
+                                    height: 100%;
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+            div.right {
+                div.button {
+                    width: 150px;
+                    padding: 14px 24px;
+                    border: 2px solid #fff;
+                    border-radius: 32px;
+                    color: #fff;
+                    display: flex;
+                    align-items: center;
+                    justify-content: space-between;
+
+                }
+            }
+            
         }
     }
 }
