--- a/css/style.css
+++ b/css/style.css
@@ -116,6 +116,10 @@
   font-family: "Helvetica Neue";
 }
 
+body {
+  min-width: 320px;
+}
+
 ul, ol {
   list-style: none;
 }
@@ -152,6 +156,9 @@ header div.wrapper {
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
+header div.wrapper div.hamberger {
+  display: none;
 }
 header div.wrapper div.logo {
   width: 130px;
@@ -219,6 +226,104 @@ header div.wrapper div.right a span.img {
 header div.wrapper div.right a span.img svg {
   width: 100%;
   display: block;
+}
+header div.hamburger-menu {
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  right: 0;
+  width: 0;
+  height: 100%;
+  background: #fff;
+  overflow-x: hidden;
+  transition: 0.35s;
+}
+header div.hamburger-menu div.header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 80px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.4);
+}
+header div.hamburger-menu nav.mobile-nav ul li {
+  height: 60px;
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.15);
+  padding: 0px 20px;
+}
+header div.hamburger-menu nav.mobile-nav ul li a {
+  font-size: 20px;
+}
+header div.hamburger-menu div.footer {
+  padding: 40px 0;
+  background: #111b21;
+}
+header div.hamburger-menu div.footer div.top {
+  border-bottom: 1px solid #33463f;
+}
+header div.hamburger-menu div.footer div.top div.wrapper {
+  display: block;
+  display: flex;
+  justify-content: space-between;
+  padding: 10px 0 40px;
+}
+header div.hamburger-menu div.footer div.top div.wrapper a.download {
+  display: flex;
+  align-items: center;
+  padding: 18px 30px;
+  border: 1px solid #000;
+  border-radius: 32px;
+  background-color: #25d366;
+}
+header div.hamburger-menu div.footer div.top div.wrapper div.social {
+  margin-right: 80px;
+}
+header div.hamburger-menu div.footer div.top div.wrapper div.social ul {
+  display: flex;
+  align-items: center;
+}
+header div.hamburger-menu div.footer div.top div.wrapper div.social ul li {
+  margin-right: 10px;
+}
+header div.hamburger-menu div.footer div.top div.wrapper div.social ul li a {
+  color: #fff;
+  padding: 10px;
+  margin-right: 15px;
+  border-radius: 50%;
+  background: #1c1e21;
+  border: 1px solid #fff;
+  width: 20px;
+  height: 20px;
+  display: block;
+}
+header div.hamburger-menu div.footer div.top div.wrapper div.social ul li a svg {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+header div.hamburger-menu div.footer div.top div.wrapper div.social ul li a:first-child svg {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+header div.hamburger-menu div.footer div.bottom {
+  padding-top: 40px;
+  color: #fff;
+  font-size: 12px;
+}
+header div.hamburger-menu div.footer div.bottom div.wrapper div.terms a {
+  color: #fff;
+}
+header div.hamburger-menu div.footer div.bottom div.wrapper div.lang {
+  padding: 14px 28px;
+  font-size: 16px;
+  font-weight: 500;
+  border: 1px solid #fff;
+  border-radius: 32px;
+}
+header div.hamburger-menu div.footer div.bottom div.wrapper div.lang span.lang-name {
+  margin-right: 80px;
 }
 
 #home {
@@ -320,6 +425,12 @@ header div.wrapper div.right a span.img svg {
 #desc div.wrapper img {
   width: 100%;
   display: block;
+}
+#desc div.wrapper img:nth-child(2) {
+  display: none;
+}
+#desc div.wrapper img:nth-child(5) {
+  display: none;
 }
 #desc div.wrapper p {
   font-size: 56px;
@@ -426,11 +537,56 @@ footer {
 footer div.wrapper {
   width: 83%;
 }
+footer div.wrapper div.mobile-download {
+  height: 60px;
+  display: none;
+  align-items: center;
+  justify-content: center;
+  padding-bottom: 30px;
+  border-bottom: 1px solid #616060;
+}
+footer div.wrapper div.mobile-download a {
+  padding: 16px 28px;
+  width: 160px;
+  box-sizing: border-box;
+  border: 1px solid #000;
+  border-radius: 32px;
+  background-color: #25d366;
+}
+footer div.wrapper div.mobile-social {
+  display: none;
+  align-items: center;
+  justify-content: center;
+  padding: 15px 0;
+  border-bottom: 1px solid #616060;
+}
+footer div.wrapper div.mobile-social ul {
+  display: flex;
+  align-items: center;
+}
+footer div.wrapper div.mobile-social ul li {
+  margin-right: 30px;
+}
+footer div.wrapper div.mobile-social ul li a {
+  color: #fff;
+  width: 15px;
+  height: 15px;
+  display: block;
+  padding: 15px;
+  border: 1px solid #fff;
+  border-radius: 50%;
+  background: #1c1e21;
+}
+footer div.wrapper div.mobile-social ul li a svg {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
 footer div.wrapper div.top {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin-bottom: 100px;
+  margin-bottom: 40px;
 }
 footer div.wrapper div.top div.logo {
   display: block;
@@ -476,6 +632,44 @@ footer div.wrapper div.top div.links div.column ul li {
 footer div.wrapper div.top div.links div.column ul li a {
   color: #fff;
   font-size: 16px;
+}
+footer div.wrapper div.top div.down-social-max1024 {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 15px 0;
+}
+footer div.wrapper div.top div.down-social-max1024 a {
+  display: flex;
+  align-items: center;
+  padding: 16px 28px;
+  width: 160px;
+  box-sizing: border-box;
+  border: 1px solid #000;
+  border-radius: 32px;
+  background-color: #25d366;
+}
+footer div.wrapper div.top div.down-social-max1024 div.social ul {
+  display: flex;
+  align-items: center;
+}
+footer div.wrapper div.top div.down-social-max1024 div.social ul li {
+  margin-right: 30px;
+}
+footer div.wrapper div.top div.down-social-max1024 div.social ul li a {
+  color: #fff;
+  width: 50px;
+  height: 50px;
+  display: block;
+  padding: 15px;
+  border: 1px solid #fff;
+  border-radius: 50%;
+  background: #1c1e21;
+}
+footer div.wrapper div.top div.down-social-max1024 div.social ul li a svg {
+  display: block;
+  width: 100%;
+  height: 100%;
 }
 footer div.wrapper div.bottom {
   border-top: 0.2px solid #616060;
@@ -541,4 +735,263 @@ footer div.wrapper div.bottom div.right div.button {
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
+
+@media all and (max-width: 1200px) {
+  header {
+    height: 60px;
+  }
+  header div.wrapper div.hamberger {
+    display: block;
+  }
+  header div.wrapper div.logo {
+    width: 100px;
+  }
+  header div.wrapper nav {
+    display: none;
+  }
+  header div.wrapper div.right a {
+    display: none;
+  }
+  header div.wrapper div.right a:last-child {
+    display: block;
+    padding: 6px;
+  }
+  header div.wrapper div.right a:last-child span.text {
+    display: none;
+  }
+}
+@media all and (max-width: 1024px) {
+  #home div.wrapper div.container {
+    flex-direction: column-reverse;
+    align-items: start;
+    padding: 0px 30px;
+    background-size: 300%;
+    background-position: 45% 20%;
+  }
+  #home div.wrapper div.container div.right {
+    margin-top: 330px;
+  }
+  #home div.wrapper div.container div.right img:nth-child(4) {
+    display: none;
+  }
+  #home div.wrapper div.container div.right img:nth-child(5) {
+    display: none;
+  }
+  #home div.wrapper div.container div.right img:nth-child(6) {
+    display: none;
+  }
+  #home div.wrapper div.container div.right img:nth-child(7) {
+    display: none;
+  }
+  #home div.wrapper div.container div.left div.top h2 {
+    font-size: 64px;
+  }
+  #home div.wrapper div.container div.left div.top p {
+    font-size: 16px;
+    font-weight: 400;
+  }
+  #home div.wrapper div.container div.left div.bottom a {
+    margin-bottom: 100px;
+  }
+  #home div.wrapper div.container div.left div.bottom a:nth-child(2) {
+    display: none;
+  }
+  #desc div.wrapper p {
+    font-size: 32px;
+    max-width: 100%;
+    line-height: 32px;
+  }
+  #features div.item div.wrapper {
+    display: block;
+  }
+  #features div.item div.wrapper div.item-desc {
+    width: 50%;
+    margin-bottom: 30px;
+  }
+  #features div.item div.wrapper div.item-desc h3 {
+    font-size: 40px;
+    line-height: 1;
+  }
+  #features div.item div.wrapper div.item-desc p {
+    font-size: 16px;
+  }
+  #features div.item div.wrapper div.item-desc a {
+    font-size: 16px;
+  }
+  #features div.item div.wrapper div.item-img {
+    width: 100%;
+  }
+  footer {
+    padding: 50px 0px 30px;
+  }
+  footer div.wrapper {
+    width: 95%;
+  }
+  footer div.wrapper div.top {
+    display: block;
+  }
+  footer div.wrapper div.top div.logo div.logo-container {
+    margin-bottom: 60px;
+  }
+  footer div.wrapper div.top div.logo a {
+    display: none;
+  }
+  footer div.wrapper div.top div.links {
+    width: 100%;
+  }
+  footer div.wrapper div.bottom div.left div.copy p {
+    max-width: none;
+    font-size: 11px;
+  }
+  footer div.wrapper div.bottom div.left div.terms a {
+    font-size: 11px;
+    max-width: none;
+  }
+  footer div.wrapper div.bottom div.left div.terms a:nth-child(2) {
+    display: none;
+  }
+  footer div.wrapper div.bottom div.left div.social {
+    display: none;
+  }
+}
+@media all and (max-width: 767px) {
+  header {
+    height: 70px;
+  }
+  #home {
+    padding: 70px 0 25px;
+  }
+  #home div.wrapper div.container {
+    border-radius: 20px;
+    background-size: 350%;
+  }
+  #home div.wrapper div.container div.left {
+    width: 100%;
+  }
+  #home div.wrapper div.container div.left div.top {
+    margin-bottom: 40px;
+  }
+  #home div.wrapper div.container div.left div.top h2 {
+    font-size: 44px;
+    margin-bottom: 10px;
+  }
+  #home div.wrapper div.container div.left div.top p {
+    font-size: 16px;
+  }
+  #home div.wrapper div.container div.left div.bottom a {
+    margin-bottom: 50px;
+  }
+  #home div.wrapper div.container div.right {
+    width: 100%;
+  }
+  #desc div.wrapper img:first-child {
+    display: none;
+  }
+  #desc div.wrapper img:nth-child(2) {
+    display: block;
+    width: 70%;
+    margin: 0 auto;
+  }
+  #desc div.wrapper img:nth-child(4) {
+    display: none;
+  }
+  #desc div.wrapper img:nth-child(5) {
+    display: block;
+    width: 70%;
+    margin: 0 auto;
+  }
+  #desc div.wrapper p {
+    font-size: 24px;
+    line-height: 1;
+  }
+  #features div.item div.wrapper div.item-desc {
+    width: 100%;
+  }
+  #features div.item div.wrapper div.item-desc h3 {
+    font-size: 32px;
+    line-height: 1;
+  }
+  #features div.item div.wrapper div.item-desc p {
+    font-size: 16px;
+    line-height: 22px;
+  }
+  #features div.item div.wrapper div.item-desc a {
+    font-size: 16px;
+  }
+  #features div.item div.wrapper div.item-img {
+    width: 30%;
+    margin: 0 auto;
+  }
+  #features div.item div.wrapper div.item-img img:first-child {
+    width: 100%;
+    display: block;
+  }
+  #features div.item:nth-child(3) div.wrapper div.item-img img.sub, #features div.item:nth-child(4) div.wrapper div.item-img img.sub {
+    margin-top: 55px;
+    width: 35%;
+    height: auto;
+  }
+  footer {
+    padding: 30px 0px 30px;
+  }
+  footer div.wrapper div.mobile-download {
+    display: flex;
+  }
+  footer div.wrapper div.mobile-social {
+    display: flex;
+  }
+  footer div.wrapper div.top {
+    padding-top: 30px;
+  }
+  footer div.wrapper div.top div.links {
+    flex-wrap: wrap;
+  }
+  footer div.wrapper div.top div.links div.column {
+    width: 50%;
+    margin-bottom: 25px;
+  }
+  footer div.wrapper div.top div.down-social-max1024 {
+    display: none;
+  }
+  footer div.wrapper div.bottom div.left {
+    align-items: flex-start;
+    flex-direction: column-reverse;
+  }
+  footer div.wrapper div.bottom div.left div.terms {
+    flex-direction: column-reverse;
+    align-items: flex-start;
+  }
+  footer div.wrapper div.bottom div.left div.terms a:nth-child(2) {
+    display: block;
+  }
+}
+@media all and (max-width: 640px) {
+  #features div.item div.wrapper div.item-img {
+    width: 40%;
+    margin: 0 auto;
+  }
+  #features div.item div.wrapper div.item-img img:first-child {
+    width: 100%;
+    display: block;
+  }
+  #features div.item:nth-child(3) div.wrapper div.item-img img.sub, #features div.item:nth-child(4) div.wrapper div.item-img img.sub {
+    margin-top: 58px;
+    width: 45%;
+    height: auto;
+  }
+}
+@media all and (max-width: 420px) {
+  #home {
+    padding: 70px 0 25px;
+  }
+  #home div.wrapper div.container {
+    background-size: 450%;
+  }
+  #home div.wrapper div.container div.right {
+    margin-top: 200px;
+  }
+  #features div.item div.wrapper div.item-img {
+    width: 60%;
+  }
 }/*# sourceMappingURL=style.css.map */
