--- a/css/style.scss
+++ b/css/style.scss
@@ -149,6 +149,9 @@
     padding: 0;
     font-family: 'Helvetica Neue';
 }
+body {
+    min-width: 320px;
+}
 ul, ol {
     list-style: none;
 }
@@ -181,6 +184,9 @@ header {
         display: flex;
         align-items: center;
         justify-content: space-between;
+        div.hamberger {
+            display: none;
+        }
         div.logo {
             width: 130px;
             display: block;
@@ -248,6 +254,114 @@ header {
                     svg {
                         width: 100%;
                         display: block;
+                    }
+                }
+            }
+        }
+    }
+    div.hamburger-menu {
+        position: fixed;
+        z-index: 1;
+        top: 0;
+        right: 0;
+        width: 0;
+        height: 100%;
+        background: #fff;
+        overflow-x: hidden;
+        transition: 0.35s;
+        div.header {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            height: 80px;
+            border-bottom: 1px solid rgb(0, 0, 0, 0.4);
+        }
+        nav.mobile-nav {
+                ul {
+                    li{
+                        height: 60px;
+                        display: flex;
+                        align-items: center;
+                        border-bottom: 1px solid rgb(0, 0, 0, 0.15);
+                        padding: 0px 20px;
+                        a {
+                            font-size: 20px;
+                        }
+                    }
+                }
+        }
+        div.footer {
+            padding: 40px 0;
+            background: #111b21;
+            div.top {
+                border-bottom: 1px solid #33463f;
+                div.wrapper {
+                    display: block;
+                    display: flex;
+                    justify-content: space-between;
+                    padding: 10px 0 40px;
+                    a.download {
+                        display: flex;
+                        align-items: center;
+                        padding: 18px 30px;
+                        border: 1px solid #000;
+                        border-radius: 32px;
+                        background-color: #25d366;
+                    }
+                    div.social {
+                        margin-right: 80px;
+                        ul {
+                            display: flex;
+                            align-items: center;
+                            li {
+                                margin-right: 10px;
+                                a {
+                                    color: #fff;
+                                    padding: 10px;
+                                    margin-right: 15px;
+                                    border-radius: 50%;
+                                    background: #1c1e21;
+                                    border: 1px solid #fff;
+                                    width: 20px;
+                                    height: 20px;
+                                    display: block;
+                                    svg {
+                                        display: block;
+                                        width: 100%;
+                                        height: 100%;
+                                    }
+                                    &:first-child {
+                                        svg {
+                                            display: block;
+                                        width: 100%;
+                                        height: 100%;
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+            div.bottom {
+                padding-top: 40px;
+                color: #fff;
+                font-size: 12px;
+                div.wrapper {
+                    div.terms {
+                        a {
+                            color: #fff;
+                        }
+                    }
+                    div.lang {
+                        padding: 14px 28px;
+                        font-size: 16px;
+                        font-weight: 500;
+                        border: 1px solid #fff;
+                        border-radius: 32px;
+                        span.lang-name {
+                            margin-right: 80px;
+                        }
                     }
                 }
             }
@@ -354,6 +468,12 @@ header {
         img {
             width: 100%;
             display: block;
+            &:nth-child(2) {
+                display: none;
+            }
+            &:nth-child(5) {
+                display: none;
+            }
         }
         p {
             font-size: 56px;
@@ -480,11 +600,56 @@ footer {
     padding: 80px 0 35px;
     div.wrapper {
         width: 83%;
+        div.mobile-download {
+            height: 60px;
+            display: none;
+            align-items: center;
+            justify-content: center;
+            padding-bottom: 30px;
+            border-bottom: 1px solid #616060;;
+            a {
+                padding: 16px 28px;
+                width: 160px;
+                box-sizing: border-box;
+                border: 1px solid #000;
+                border-radius: 32px;
+                background-color: #25d366;
+            }
+        }
+        div.mobile-social {
+            display: none;
+            align-items: center;
+            justify-content: center;
+            padding: 15px 0;
+            border-bottom: 1px solid #616060;;
+            ul {
+                display: flex;
+                align-items: center;
+                li {
+                    margin-right: 30px;
+                    a {
+                        color: #fff;
+                        width: 15px;
+                        height: 15px;
+                        display: block;
+                        padding: 15px;
+                        border: 1px solid #fff;
+                        border-radius: 50%;
+                        background: #1c1e21;
+                        svg {
+                            display: block;
+                            width: 100%;
+                            height: 100%;
+                        }
+                    }
+                }
+            }
+        }
         div.top {
             display: flex;
             align-items: center;
             justify-content: space-between;
-            margin-bottom: 100px;
+            margin-bottom: 40px;
             div.logo {
                 display: block;
                 width: 20%;
@@ -527,6 +692,46 @@ footer {
                             a {
                                 color: #fff;
                                 font-size: 16px;
+                            }
+                        }
+                    }
+                }
+            }
+            div.down-social-max1024 {
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+                padding: 15px 0;
+                a {
+                    display: flex;
+                    align-items: center;
+                    padding: 16px 28px;
+                    width: 160px;
+                    box-sizing: border-box;
+                    border: 1px solid #000;
+                    border-radius: 32px;
+                    background-color: #25d366;
+                }
+                div.social {
+                    ul {
+                        display: flex;
+                        align-items: center;
+                        li {
+                            margin-right: 30px;
+                            a {
+                                color: #fff;
+                                width: 50px;
+                                height: 50px;
+                                display: block;
+                                padding: 15px;
+                                border: 1px solid #fff;
+                                border-radius: 50%;
+                                background: #1c1e21;
+                                svg {
+                                    display: block;
+                                    width: 100%;
+                                    height: 100%;
+                                }
                             }
                         }
                     }
@@ -604,5 +809,358 @@ footer {
             }
             
         }
+    }
+}
+
+@media all and (max-width:1200px){
+    header {
+        height: 60px;
+        div.wrapper {
+            div.hamberger {
+                display: block;
+            }
+            div.logo {
+                width: 100px;
+            }
+            nav {
+                display: none;
+            }
+            div.right {
+                a {
+                    display: none;
+                    &:last-child {
+                        display: block;
+                        padding: 6px;
+                        span.text {
+                            display: none;
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+@media all and (max-width:1024px){
+    #home {
+        div.wrapper {
+            div.container {
+                flex-direction: column-reverse;
+                align-items: start;
+                padding: 0px 30px;
+                background-size: 300%;
+                background-position: 45% 20%;
+                div.right {
+                    margin-top: 330px;
+                    img {
+                        &:nth-child(4) {
+                            display: none;
+                        }
+                        &:nth-child(5) {
+                            display: none;
+                        }
+                        &:nth-child(6) {
+                            display: none;
+                        }
+                        &:nth-child(7) {
+                            display: none;
+                        }
+                    }
+                }
+                div.left {
+                    div.top {
+                        h2 {
+                            font-size: 64px;
+                        }
+                        p {
+                            font-size: 16px;
+                            font-weight: 400;
+                        }
+                    }
+                    div.bottom {
+                        a {
+                            margin-bottom: 100px;
+                            &:nth-child(2) {
+                                display: none;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+    #desc {
+        div.wrapper {
+            p {
+                font-size: 32px;
+                max-width: 100%;
+                line-height: 32px;
+            }
+        }
+    }
+    #features {
+        div.item {
+            div.wrapper {
+                display: block;
+                div.item-desc {
+                    width: 50%;
+                    margin-bottom: 30px;
+                    h3 {
+                        font-size: 40px;
+                        line-height: 1;
+                    }
+                    p {
+                        font-size: 16px;
+                    }
+                    a {
+                        font-size: 16px;
+                    }
+                }
+                div.item-img {
+                    width: 100%;
+                }
+            }
+        }
+    }
+    footer {
+        padding: 50px 0px 30px;
+        div.wrapper {
+            width: 95%;
+            div.top {
+                display: block;
+                div.logo {
+                    div.logo-container {
+                        margin-bottom: 60px;
+                    }
+                    a {
+                        display: none;
+                    }
+                }
+                div.links {
+                    width: 100%;
+                }
+            }
+            div.bottom {
+                div.left {
+                    div.copy {
+                        p {
+                            max-width: none;
+                            font-size: 11px;
+                        }
+                    }
+                    div.terms {
+                        a {
+                            font-size: 11px;
+                            max-width: none;
+                            &:nth-child(2) {
+                                display: none;
+                            }
+                        }
+                    }
+                    div.social {
+                        display: none;
+                    }
+                }
+            }
+        }
+    }
+}
+@media all and (max-width:980px){
+
+}
+@media all and (max-width:767px){
+    header {
+        height: 70px;
+    }
+    #home {
+        padding: 70px 0 25px;
+        div.wrapper {
+            div.container {
+                border-radius: 20px;
+                background-size: 350%;
+                div.left {
+                    width: 100%;
+                    div.top {
+                        margin-bottom: 40px;
+                        h2 {
+                            font-size: 44px;
+                            margin-bottom: 10px;
+                        }
+                        p {
+                            font-size: 16px;
+                        }
+                    }
+                    div.bottom {
+                        a {
+                            margin-bottom: 50px;
+                        }
+                    }
+                }
+                div.right {
+                    width: 100%;
+                }
+            }
+        }
+    }
+    #desc {
+        div.wrapper {
+            img {
+                &:first-child {
+                    display: none;
+                }
+                &:nth-child(2) {
+                    display: block;
+                    width: 70%;
+                    margin: 0 auto;
+                }
+                &:nth-child(4) {
+                    display: none;
+                }
+                &:nth-child(5) {
+                    display: block;
+                    width: 70%;
+                    margin: 0 auto;
+                }
+            }
+            p {
+                font-size: 24px;
+                line-height: 1;
+            }
+        }
+    }
+    #features {
+        div.item {
+            div.wrapper {
+                div.item-desc {
+                    width: 100%;
+                    h3 {
+                        font-size: 32px;
+                        line-height: 1;
+                    }
+                    p {
+                        font-size: 16px;
+                        line-height: 22px;
+                    }
+                    a {
+                        font-size: 16px;
+                    }
+                }
+                div.item-img {
+                    width: 30%;
+                    margin: 0 auto;
+                    img {
+                        &:first-child {
+                            width: 100%;
+                            display: block;
+                        }
+                    }
+                }
+            }
+            &:nth-child(3), &:nth-child(4) {
+                div.wrapper {
+                    div.item-img {
+                        img.sub {
+                            margin-top: 55px;
+                            width: 35%;
+                            height: auto;
+                        }
+                    }
+                }
+            }
+        }
+    }
+    footer {
+        padding: 30px 0px 30px;
+        div.wrapper {
+            div.mobile-download {
+                display: flex;
+            }
+            div.mobile-social {
+                display: flex;
+            }
+            div.top {
+                padding-top: 30px;
+                div.links {
+                    flex-wrap: wrap;
+                    div.column {
+                        width: 50%;
+                        margin-bottom: 25px;
+                    }
+                }
+                div.down-social-max1024 {
+                    display: none;
+                }
+            }
+            div.bottom {
+                div.left {
+                    align-items: flex-start;
+                    flex-direction: column-reverse;
+                    div.terms {
+                        flex-direction: column-reverse;
+                        align-items: flex-start;
+                        a {
+                            &:nth-child(2) {
+                                display: block;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+        
+    }
+}
+@media all and (max-width:640px){
+    #features {
+        div.item {
+            div.wrapper {
+                div.item-img {
+                    width: 40%;
+                    margin: 0 auto;
+                    img {
+                        &:first-child {
+                            width: 100%;
+                            display: block;
+                        }
+                    }
+                }
+            }
+            &:nth-child(3), &:nth-child(4) {
+                div.wrapper {
+                    div.item-img {
+                        img.sub {
+                            margin-top: 58px;
+                            width: 45%;
+                            height: auto;
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+@media all and (max-width:480px){}
+@media all and (max-width:420px){
+    #home {
+        padding: 70px 0 25px;
+        div.wrapper {
+            div.container {
+                background-size: 450%;
+                div.right {
+                    margin-top: 200px;
+                }
+            }
+        }
+    }
+    #features {
+        div.item {
+            div.wrapper {
+                div.item-img {
+                    width: 60%;
+                }
+            }
+        }
+    }
+    body {
+        // min-width: 420px;
     }
 }
