--- a/css/style.scss
+++ b/css/style.scss
@@ -184,7 +184,7 @@ header {
         display: flex;
         align-items: center;
         justify-content: space-between;
-        div.hamberger {
+        div.hamburger {
             display: none;
         }
         div.logo {
@@ -698,7 +698,7 @@ footer {
                 }
             }
             div.down-social-max1024 {
-                display: flex;
+                display: none;
                 align-items: center;
                 justify-content: space-between;
                 padding: 15px 0;
